# tea-codec

./: .gitignore  Cargo.toml  README.md  expand.rs  rust-toolchain.toml
error_macros/: Cargo.toml
error_macros/src/: ast.rs  emit.rs  lib.rs
error_macros/src/emit/: impls.rs
proto/: actor-delegate.proto  actor-executor.proto  actor-intercom.proto  actor-pinner.proto  actor-ra.proto  actor-report.proto  actor-tappstore.proto  crypto-provider.proto  env-provider.proto  ipfs-provider.proto  kvp-provider.proto  layer1-provider.proto  layer1_task.proto  libp2p-delegate.proto  libp2p-executor.proto  libp2p-provider.proto  libp2p-ra.proto  nitro-provider.proto  orbitdb-provider.proto  p2p.proto  persist-provider.proto  raft-provider.proto  receipt.proto  replica-provider.proto  runtime-rpc.proto  tokenstate-provider.proto  tpm-provider.proto  tx-in-block.proto  vmh.proto
src/: env-backup.rs  env.rs  error.rs  errorn.rs  errorx.rs  ipfs_codec.rs  keyvalue-backup.rs  keyvalue.rs  lib.rs  ops.rs  ra.rs  task.rs  task_in_block.rs  tests.rs
src/error/: code.rs  translator.rs
src/error/code/: client.rs  common.rs  layer1.rs  service.rs  vmh.rs  wascc.rs
src/errorn/: global.rs  macros.rs  scope.rs  serde.rs
src/errorx/: aggregate.rs  common.rs  global.rs  macros.rs  name_lookup.rs  scope.rs  serde.rs  sync_error.rs
src/ops/: crypto.rs  env.rs  kvp.rs  layer1.rs  libp2p.rs  persist.rs  replica.rs  state_receiver.rs  tappstore.rs  token_state.rs
