[package]
name = "tea-codec"
version = "0.1.1"
authors = ["Kevin Zhang <kevin.zhang.canada@gmail.com>"]
edition = "2018"
description = "Encoding and decoding primitives for TeaRust Project"
license = "Apache-2.0"
readme = "README.md"
keywords = ["webassembly", "wasm", "codec", "tea", "wascc"]
categories = ["wasm", "data-structures","encoding"]
[badges]
maintenance = { status = "actively-developed"}


[dependencies]
serde = "1.0.105"
serde_json = "1.0.50"
serde_derive = "1.0.105"
serde_bytes = "0.11.3"
rmp-serde = { version = "0.15.5", features = ["serde128"] }
log = { version="0.4.8", features =["std","serde"]}
thiserror = "1.0.22"
anyhow = "1.0.34"

[dev-dependencies]
structopt = "0.3.12"
serde_json = "1.0.50"
base64 = "0.12.0"
