[package]
name = "tea-codec"
version = "0.1.1"
authors = ["Kevin Zhang <kevin.zhang.canada@gmail.com>"]
edition = "2018"
description = "Encoding and decoding primitives for TeaRust Project"
license = "Apache-2.0"
readme = "README.md"
keywords = ["webassembly", "wasm", "codec", "tea", "wascc"]
categories = ["wasm", "data-structures", "encoding"]
[badges]
maintenance = { status = "actively-developed" }


[dependencies]
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2.0"
serde_derive = "1.0"
serde_bytes = "0.11.3"
prost = "0.11.0"
base64 = "0.13.0"
hex = "0.4.0"
log = { version = "0.4", features = ["std", "serde"] }
thiserror = "1.0.22"

[dev-dependencies]
structopt = "0.3.12"
serde_json = "1.0.50"
