[package]
name = "tea-error_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0" }
quote = "1.0"
itertools = "0.10"
convert_case = "0.5"
